export/1-connectora-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml --volumes hostPath -o export
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: connectora
  name: connectora
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: connectora
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml --volumes hostPath -o export
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/local: "true"
        io.kompose.service: connectora
    spec:
      containers:
        - env:
            - name: CONFIGURATION_PATH
              value: /config/config.json
            - name: DAPS_INCOMING_DAT_DEFAULT_WELLKNOWN
              value: /jwks.json
            - name: DAPS_KEY_URL
              value: http://omejdn/auth/jwks.json
            - name: DAPS_TOKEN_URL
              value: http://omejdn/auth/token
            - name: DAPS_URL
              value: http://omejdn
            - name: SERVER_SSL_KEY-STORE
              value: file:///config/connectorA.p12
          image: ghcr.io/international-data-spaces-association/dataspace-connector:7.1.0
          name: connectora
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: mydir
            - mountPath: /conf
              name: mydir
      restartPolicy: Always

      volumes:
        - name: mydir 
          configMap:
            name: ids-files-conectora 

      
status: {}
