export/0-broker-fuseki-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml --volumes hostPath -o export
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: broker-fuseki
  name: broker-fuseki
spec:
  ports:
    - name: "3030"
      port: 3030
      targetPort: 3030
  selector:
    io.kompose.service: broker-fuseki
status:
  loadBalancer: {}
