export/0-broker-reverseproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml --volumes hostPath -o export
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: broker-reverseproxy
  name: broker-reverseproxy
spec:
  ports:
    - name: "443"
      port: 443
      targetPort: 443
    - name: "81"
      port: 81
      targetPort: 80
  selector:
    io.kompose.service: broker-reverseproxy
status:
  loadBalancer: {}
