export/0-connectorb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml --volumes hostPath -o export
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: connectorb
  name: connectorb
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8081
  selector:
    io.kompose.service: connectorb
status:
  loadBalancer: {}
