export/4-ingress-connection.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectora
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrought : "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "false"
    nginx.ingress.kubernetes.io/backend-protocol: https
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  #- host: connectora.localhost
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectora
            port:
              number: 80



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectorb
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
    nginx.ingress.kubernetes.io/backend-protocol: https
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  #- host: connectora.localhost
  - http:
      paths:
      - path: /connectorb
        pathType: Prefix
        backend:
          service:
            name: connectorb
            port:
              number: 80
